samples/_failures_safe/1761091142_b97155_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afcf662d.c: In function ‘main’:
./samples/SAFE/__tmp_afcf662d.c:164: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_afcf662d.c:163:5: error: expected declaration or statement at end of input
  163 |     if
      |     ^~
